# nativeble

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE.md  README.md  TUTORIAL.md
.github/workflows/: ci_nightly.yml  ci_release.yml
cmake/: configure_cmake.cmake  configure_dependencies.cmake  configure_outputs.cmake  configure_targets.cmake
src-ble/: NativeBleController.cpp  NativeBleController.h  NativeBleControllerTypes.h
src-ble-c-api/: ble_c_api.cpp  ble_c_api.h
src-ble-test/: main.cpp
src-ble/linux/: NativeBleInternal.cpp  NativeBleInternal.h
src-ble/linux/bluezdbus/: BluezAdapter.cpp  BluezAdapter.h  BluezAgent.cpp  BluezDevice.cpp  BluezDevice.h  BluezGattCharacteristic.cpp  BluezGattCharacteristic.h  BluezGattService.cpp  BluezGattService.h  BluezService.cpp  BluezService.h
src-ble/linux/bluezdbus/interfaces/: Adapter1.cpp  Adapter1.h  Device1.cpp  Device1.h  GattCharacteristic1.cpp  GattCharacteristic1.h  GattService1.cpp  GattService1.h
src-ble/linux/simpledbus/: SimpleDBus.h
src-ble/linux/simpledbus/base/: Connection.cpp  Connection.h  Holder.cpp  Holder.h  Message.cpp  Message.h
src-ble/linux/simpledbus/interfaces/: PropertyHandler.cpp  PropertyHandler.h
src-ble/macos/: NativeBleInternal.h  NativeBleInternal.mm
src-ble/macos/macable/: macable.h  macable.mm
src-ble/windows/: NativeBleInternal.cpp  NativeBleInternal.h
toolchains/linux/: linux_compile.sh  linux_install.sh
toolchains/macos/: macos_compile.sh
toolchains/utils/: tag_push_release.sh
toolchains/windows/: windows_compile.bat
toolchains/windows/scripts/: compile.ps1
(+4 files in other folders)
